--- a/features/user/src/main/res/layout/fragment_user.xml
+++ b/features/user/src/main/res/layout/fragment_user.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/margin_regular"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="@dimen/margin_regular">
 
     <ImageView
         android:id="@+id/user_avatar_image_view"
