--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:orientation="vertical">
 
         <fragment
-            android:id="@+id/main_container"
+            android:id="@+id/fragment_container"
             android:name="com.lockwood.themoviedb.user.presentation.ui.UserFragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
