--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,20 +16,23 @@
         android:orientation="vertical">
 
         <fragment
-            android:id="@+id/fragment_container"
-            android:name="com.lockwood.themoviedb.user.presentation.ui.UserFragment"
+            android:id="@+id/nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            app:defaultNavHost="true"
+            app:navGraph="@navigation/main_graph"
+            tools:ignore="FragmentTagUsage"
             tools:layout="@layout/fragment_search" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/main_navigation"
+            android:id="@+id/navigation"
             style="@style/BottomNavigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
-            app:menu="@menu/navigation" />
+            app:menu="@menu/main_navigation" />
 
     </LinearLayout>
 
