--- a/app/src/main/res/menu/main_navigation.xml
+++ b/app/src/main/res/menu/main_navigation.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/home_graph"
         android:icon="@drawable/ic_movies"
         android:orderInCategory="0"
         android:title="@string/title_movies" />
     <item
+        android:id="@+id/favorite_movies_graph"
         android:icon="@drawable/ic_favorite"
         android:orderInCategory="1"
         android:title="@string/title_favorites" />
     <item
+        android:id="@+id/user_graph"
         android:icon="@drawable/ic_person"
         android:orderInCategory="2"
         android:title="@string/title_profile" />
