--- a/features/movies/src/main/res/layout/item_movie_list.xml
+++ b/features/movies/src/main/res/layout/item_movie_list.xml
@@ -1,6 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/margin_big">
 
-</FrameLayout>
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="64dp"
+        android:layout_height="96dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@drawable/ic_search_background" />
+
+    <TextView
+        android:id="@+id/item_movie_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        tools:text="Удивительное путешествие до..." />
+
+    <TextView
+        android:id="@+id/item_movie_eng_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/item_movie_title"
+        app:layout_constraintTop_toBottomOf="@+id/item_movie_title"
+        tools:text="Dolittle (2020)" />
+
+    <TextView
+        android:id="@+id/item_movie_genres"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/item_movie_title"
+        app:layout_constraintTop_toBottomOf="@+id/item_movie_eng_title"
+        tools:text="фэнтези, боевик, комедия" />
+
+    <TextView
+        android:id="@+id/item_movie_rating_start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:text="6.1"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/item_movie_title"
+        app:layout_constraintTop_toBottomOf="@+id/item_movie_genres"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/item_movie_rating_end"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        app:layout_constraintBottom_toBottomOf="@+id/item_movie_rating_start"
+        app:layout_constraintStart_toEndOf="@+id/item_movie_rating_start"
+        app:layout_constraintTop_toTopOf="@+id/item_movie_rating_start"
+        tools:text="4 832" />
+
+    <ImageView
+        android:id="@+id/item_movie_duration_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        app:layout_constraintBottom_toBottomOf="@+id/item_movie_rating_start"
+        app:layout_constraintStart_toEndOf="@+id/item_movie_rating_end"
+        app:layout_constraintTop_toTopOf="@+id/item_movie_rating_start"
+        app:srcCompat="@drawable/ic_access_time" />
+
+    <TextView
+        android:id="@+id/item_movie_duration_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        android:layout_marginEnd="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/item_movie_duration_image"
+        app:layout_constraintTop_toTopOf="@+id/item_movie_duration_image"
+        tools:text=" 91 мин" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
